--- a/assets/shareloc/app/views/main.html
+++ b/assets/shareloc/app/views/main.html
@@ -6,10 +6,13 @@
   </div>
 </div>
 <div class="pure-g">
-  <div class="pure-u-1-2 ">
+  <div class="pure-u-1-3">
     <div ng-class="{true:'boton-rojo', false:'boton-azul'}[crearMarca]" class="button-selection" ng-click="marcar()">Marcar Lugar</div>
   </div>
-  <div class="pure-u-1-2">
-    <div ng-class="{true:'boton-rojo', false:'boton-azul'}[borrarMarca]" class="button-selection" ng-click="desmarcar()">Borrar Marca</div>
+  <div class="pure-u-1-3">
+    <div ng-class="{true:'boton-rojo', false:'boton-azul'}[borrarMarca]" class="button-selection" ng-click="desmarcar()">Borrar Lugar</div>
+  </div>
+  <div class="pure-u-1-3">
+    <div ng-class="{true:'boton-rojo', false:'boton-azul'}[enviarMarca]" class="button-selection" ng-click="enviar()">Enviar Lugar</div>
   </div>
 </div>
