pasando el API de facebook al run block de angular

--- a/assets/shareloc/app/views/share.html
+++ b/assets/shareloc/app/views/share.html
@@ -1,1 +1,21 @@
-<p>This is the share view.</p>
+<div class="pure-g">
+  <div class="pure-u-1">
+    <form class="pure-form pure-form-stacked">
+      <fieldset>
+        <legend>Compartir Lugar</legend>
+
+        <label for="nombre">Nombre</label>
+        <input id="nombre" type="text" placeholder="Nombre">
+
+        <label for="descripcion">Descripcion</label>
+        <input id="descripcion" type="text" placeholder="Descripcion">
+
+        <label for="remember" class="pure-checkbox">
+          <input id="remember" type="checkbox"> Recordar Lugar?
+        </label>
+
+        <button type="submit" class="pure-button pure-button-primary">Enviar Lugar</button>
+      </fieldset>
+    </form>
+  </div>
+</div>
