--- a/assets/shareloc/app/styles/main.scss
+++ b/assets/shareloc/app/styles/main.scss
@@ -51,3 +51,40 @@ p, h1, h2, h3, h4, a, div, span{
 .form-preferencias{
   padding:0 15px;
 }
+
+.friend-box{
+  padding:10px;
+  border:1px solid #000;
+  width: 150px;
+  height: 250px;
+  float:left;
+  margin-right:15px;
+  margin-bottom:15px;
+  img{
+    width: 100%;
+  }
+  .share-button{
+    margin: 0 auto;
+    width: 115px;
+    display: block;
+  }
+  .friend-name{
+    margin:10px 0;
+    text-align: center;
+    font-weight: 700;
+    font-size:1.2em;
+  }
+}
+
+@media only screen
+and (min-device-width : 320px)
+and (max-device-width : 568px) {
+  .friend-box{
+    width: 120px;
+    margin-right:10px;
+    margin-bottom:10px;
+  }
+  .friend-name{
+    font-size:1em;
+  }
+}
