--- a/assets/shareloc/app/views/location.html
+++ b/assets/shareloc/app/views/location.html
@@ -1,1 +1,7 @@
-<p>This is the location view.</p>
+<div class="pure-g">
+  <div class="pure-u-1">
+    <div id="location-map">
+
+    </div>
+  </div>
+</div>
